<resources>
    <string name="app_name">InstaNotes</string>
    <string name="title_activity_my_courses">Instanotes</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="feature_screen1_title">Download/ Upload notes \n with just a few clicks</string>
    <string name="feature_screen2_title">Add notes as \n public / private</string>
    <string name="feature_screen3_title">Get notifications on the \n latest uploads</string>
    <string name="feature_screen4_title">Request notes for a \n particular lecture</string>
    <string name="action_settings">Settings</string>
    <string-array name="Semester_array">
        <item>Current Semester</item>
        <item>Previous Semester</item>
    </string-array>
    <string name="Auth_KEY">1070727904600-749hqh8d8utotcfruh314032qk6p161i.apps.googleusercontent.com</string>
    <string name="instant_access_to_class_notes">Instant Access to Class Notes</string>
    <string name="Feedback_title">Feedback</string>
    <string name="Settings_title">Settings</string>
    <string name="setting1">Device Notifications</string>
    <string name="setting2">Download over Wifi only</string>
    <string name="admin_viewfeedbacks">Feedbacks</string>
    <string name="title_activity_admin_course">Admin_course</string>
    <string name="course_code">Course Code</string>
    <string name="course_name">Course Name</string>
    <string name="course_instructor_name">Course Instructor Name</string>
    <string name="semester">Semester</string>
    <string name="create_course">Create Course</string>
    <string name="help_title">Help</string>
    <string name="account_title">Account</string>
    <string name="transactions_title">Transactions</string>
    <string name="notifications_title">Notifications</string>
    <string name="mycourses_title">My Courses</string>
    <string name="Fname">First Name</string>
    <string name="Lname">Last Name</string>
    <string name="Em">Email</string>
    <string name="crdt">Credits</string>
    <string name="rate">Please rate our app</string>
    <string name="tell_us">Tell us what you think</string>
    <string name="submit_button">Submit</string>
    <string name="feedback_hint">Write your feedback here</string>
    <string name="popular">Popular</string>
    <string name="help1">Uploading Notes</string>
    <string name="help2">Changing Privacy of Notes</string>
    <string name="help3">Requesting for New Notes</string>
    <string name="help4">How the App Works</string>
    <string name="help5">Add notes as favorites</string>
    <string name="label">Join Courses</string>
    <string name="Unenroll">Unenroll</string>
    <string name="MC_title">Mobile Computing</string>
    <string name="title_activity_dates_tab">Course Name</string>
    <string name="tab_text_1">ALL</string>
    <string name="tab_text_2">PRIVATE</string>
    <string name="contact">Contact Us</string>
    <string name="help1detail">Upload notes easily by setting the title and choosing the privacy settings</string>
    <string name="help2detail">Option to upload notes as public/private</string>
    <string name="help4detail">The app works on a credit based system. Earn credits by uploading notes and spend these credits to download notes</string>
    <string name="action_favorites">Favorites</string>
    <string name="action_request">Request for notes</string>
    <string name="title_activity_full_image_viewer">Full Image Viewer</string> <!--Change kr lio isse-->
    <string name="date_picker_title">Pick date for notes.</string>
    <string name="help3detail">You can request for notes of a particular date by a simple click</string>
    <string name="help5detail">Add certain notes to your favorites section</string>

    <string-array name="privacy_array">
        <item>Public</item>
        <item>Private</item>
    </string-array>


</resources>
