<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="mcproject.instanotesv1.Admin_addcourses">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_actionbar"
        android:theme="@style/ToolBarStyle"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"/>

    <EditText
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="30dp"
        android:hint="@string/course_code"
        android:textAlignment="center"
        android:textSize="18sp" />
    <EditText
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_gravity="center"
        android:hint="@string/course_name"
        android:textAlignment="center"
        android:textSize="18sp" />
    <EditText
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:hint="@string/course_instructor_name"
        android:textAlignment="center"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="80dp"
        android:hint="@string/semester"
        android:textAlignment="center"
        android:textSize="18sp" />

    <Button
        android:id="@+id/addcourse_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/colorAccent"
        android:padding="10dp"
        android:paddingBottom="10dp"
        android:paddingEnd="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:text="@string/create_course"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="14sp"
        tools:padding="10dp" />


</LinearLayout>
