<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="#FFFCF9"

    android:orientation="vertical"
    >
    <!--<include layout="@layout/appbar" />-->
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_actionbar"
        android:theme="@style/ToolBarStyle"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"/>
    <Space
        android:layout_width="1dp"
        android:layout_height="20dp"/>

    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/imageView13"
        android:layout_width="68dp"
        android:layout_height="68dp"
        android:layout_gravity="center_horizontal"
        app:civ_border_color="@color/newblue"
        app:civ_border_width="2dp" />
    <Space
        android:layout_width="1dp"
        android:layout_height="20dp"/>
    <View
        android:layout_width="340dp"
        android:layout_gravity="center_horizontal"

        android:layout_height="2dp"
        android:background="#d3d3d3"/>
    <Space
        android:layout_width="1dp"
        android:layout_height="20dp"/>

    <TextView
        android:id="@+id/textView12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Fname"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textSize="20sp" />
    <Space
        android:layout_width="1dp"
        android:layout_height="12dp"/>

    <TextView
        android:id="@+id/textView13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <Space
        android:layout_width="1dp"
        android:layout_height="25dp" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/Lname"
        android:textSize="20sp" />
    <Space
        android:layout_width="1dp"
        android:layout_height="12dp"/>

    <TextView
        android:id="@+id/textView21"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <Space
        android:layout_width="1dp"
        android:layout_height="25dp" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Em"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textSize="20sp" />
    <Space
        android:layout_width="1dp"
        android:layout_height="12dp"/>

    <TextView
        android:id="@+id/textView23"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="email"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <Space
        android:layout_width="1dp"
        android:layout_height="25dp" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crdt"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textSize="20sp" />
    <Space
        android:layout_width="1dp"
        android:layout_height="12dp"/>

    <TextView
        android:id="@+id/textView22"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColor="@color/black"
        android:textSize="20sp" />

</LinearLayout>
